--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@emotion/css": "^11.10.0",
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
         "@ijl/cli": "^4.1.5",
         "@types/react": "^17.0.50",
         "@types/react-dom": "^17.0.17",
@@ -21,5 +24,10 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "typescript": "^4.8.4"
+    },
+    "devDependencies": {
+        "postcss": "^8.4.18",
+        "postcss-loader": "^7.0.1",
+        "postcss-preset-env": "^7.8.2"
     }
 }
