--- a/package.json
+++ b/package.json
@@ -22,13 +22,20 @@
         "@types/react-dom": "^17.0.17",
         "express": "^4.18.2",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "typescript": "^4.8.4"
+        "react-dom": "^17.0.2"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.40.1",
+        "eslint": "^8.26.0",
+        "eslint-config-standard-with-typescript": "^23.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.3.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.31.10",
         "postcss": "^8.4.18",
         "postcss-loader": "^7.0.1",
         "postcss-preset-env": "^7.8.2",
-        "prettier": "2.7.1"
+        "prettier": "2.7.1",
+        "typescript": "^4.8.4"
     }
 }
