--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "devDependencies": {
         "postcss": "^8.4.18",
         "postcss-loader": "^7.0.1",
-        "postcss-preset-env": "^7.8.2"
+        "postcss-preset-env": "^7.8.2",
+        "prettier": "2.7.1"
     }
 }
