--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,11 @@
         "es2021": true
     },
     "extends": [
+        "eslint:recommended",
         "plugin:react/recommended",
-        "standard-with-typescript"
+        "plugin:@typescript-eslint/recommended",
+        "plugin:import/typescript",
+        "plugin:prettier/recommended" 
     ],
     "overrides": [
     ],
@@ -14,8 +17,20 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "prettier",
+        "import"
     ],
+    "settings": {
+        "import/resolver": {
+            "typescript": true,
+            "node": true 
+        }, 
+        "react": {
+            "version": "detect"
+        }
+    },
     "rules": {
+        "prettier/prettier": "error"
     }
 }
