--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.10",
+        "eslint-webpack-plugin": "^3.2.0",
         "postcss": "^8.4.18",
         "postcss-loader": "^7.0.1",
         "postcss-preset-env": "^7.8.2",
