--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    "ignorePatterns":["ijl.config.js"],
+    "ignorePatterns": ["ijl.config.js"],
     "env": {
         "browser": true,
         "es2021": true
@@ -9,24 +9,19 @@
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:import/typescript",
-        "plugin:prettier/recommended" 
+        "plugin:prettier/recommended"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": [
-        "react",
-        "prettier",
-        "import"
-    ],
+    "plugins": ["react", "prettier", "import"],
     "settings": {
         "import/resolver": {
             "typescript": true,
-            "node": true 
-        }, 
+            "node": true
+        },
         "react": {
             "version": "detect"
         }
