--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "code",
+    "name": "sugarbun",
     "version": "1.0.0",
     "description": "",
     "main": "./src/index.tsx",
@@ -14,6 +14,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@emotion/babel-plugin": "^11.10.5",
         "@emotion/css": "^11.10.0",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
@@ -22,7 +23,8 @@
         "@types/react-dom": "^17.0.17",
         "express": "^4.18.2",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.4.3"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.40.1",
