--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
         "@ijl/cli": "^4.1.5",
+        "@lottiefiles/react-lottie-player": "^3.4.9",
         "@types/react": "^17.0.50",
         "@types/react-dom": "^17.0.17",
         "express": "^4.18.2",
