--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
         "@emotion/css": "^11.10.0",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
+        "@faker-js/faker": "^7.6.0",
         "@ijl/cli": "^4.1.5",
         "@types/react": "^17.0.50",
         "@types/react-dom": "^17.0.17",
+        "chart.js": "^4.0.1",
         "express": "^4.18.2",
         "react": "^17.0.2",
+        "react-chartjs-2": "^4.3.1",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.4.3"
+        "react-i18next": "^12.0.0",
+        "react-router-dom": "^6.4.3",
+        "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.40.1",
