--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "express": "^4.18.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.4.3"
+        "react-router-dom": "^6.4.3",
+        "react-spring": "^9.5.5"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.40.1",
