--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
         "@emotion/css": "^11.10.0",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
+        "@faker-js/faker": "^7.6.0",
+        "@iconify/react": "^4.0.1",
         "@ijl/cli": "^4.1.5",
         "@lottiefiles/react-lottie-player": "^3.4.9",
         "@types/react": "^17.0.50",
         "@types/react-dom": "^17.0.17",
+        "chart.js": "^4.0.1",
         "express": "^4.18.2",
         "react": "^17.0.2",
+        "react-chartjs-2": "^5.0.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.4.3"
     },
     "devDependencies": {
+        "@types/prop-types": "^15.5.3",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
         "@typescript-eslint/parser": "^5.41.0",
         "eslint": "^8.26.0",
