--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express": "^4.18.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-hook-form": "^7.40.0",
         "react-router-dom": "^6.4.3",
         "react-spring": "^9.5.5"
     },
