--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@types/react": "^17.0.50",
         "@types/react-dom": "^17.0.17",
         "express": "^4.18.2",
+        "i18next": "^22.3.0",
+        "i18next-xhr-backend": "^3.2.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.40.0",
