--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@emotion/css": "^11.10.0",
         "@emotion/react": "^11.10.4",
         "@emotion/styled": "^11.10.4",
+        "@iconify/react": "^4.0.1",
         "@ijl/cli": "^4.1.5",
         "@lottiefiles/react-lottie-player": "^3.4.9",
         "@types/react": "^17.0.50",
@@ -25,7 +26,9 @@
         "express": "^4.18.2",
         "i18next": "^22.3.0",
         "i18next-xhr-backend": "^3.2.2",
+        "iconify": "^1.4.0",
         "react": "^17.0.2",
+        "react-chartjs-2": "^5.1.0",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.40.0",
         "react-router-dom": "^6.4.3",
