--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@lottiefiles/react-lottie-player": "^3.4.9",
         "@types/react": "^17.0.50",
         "@types/react-dom": "^17.0.17",
+        "chart.js": "^4.1.1",
         "express": "^4.18.2",
         "i18next": "^22.3.0",
         "i18next-xhr-backend": "^3.2.2",
