--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.40.0",
         "react-router-dom": "^6.4.3",
-        "react-spring": "^9.5.5",
-        "sugarbun": "^1.1.0"
+        "react-spring": "^9.5.5"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.40.1",
