--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "sugarbun",
     "main": "./src/index.tsx",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "ijl-cli --server --port=8099 --with-open-browser",
         "build": "npm run clean && ijl-cli --build --dev",
         "build:prod": "npm run clean && ijl-cli --build",
@@ -30,6 +30,7 @@
         "i18next": "^22.3.0",
         "i18next-xhr-backend": "^3.2.2",
         "iconify": "^1.4.0",
+        "jest-environment-jsdom": "^29.3.1",
         "react": "^17.0.2",
         "react-chartjs-2": "^5.1.0",
         "react-dom": "^17.0.2",
@@ -39,8 +40,14 @@
         "react-spring": "^9.5.5"
     },
     "devDependencies": {
+        "@babel/core": "^7.20.12",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
+        "@testing-library/react": "^12.1.5",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
         "@typescript-eslint/parser": "^5.41.0",
+        "babel-jest": "^29.3.1",
         "eslint": "^8.26.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^3.5.2",
@@ -48,6 +55,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.10",
         "eslint-webpack-plugin": "^3.2.0",
+        "jest": "^29.3.1",
         "postcss": "^8.4.18",
         "postcss-loader": "^7.0.1",
         "postcss-preset-env": "^7.8.2",
