--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-spring": "^9.5.5",
-    "ts-jest": "^29.0.5"
+    "ts-jest": "^29.0.5",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.20.11",
@@ -56,10 +57,14 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-webpack-plugin": "^3.2.0",
     "jest": "^29.4.1",
+    "msw": "^1.0.0",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.8.2",
     "prettier": "2.7.1",
     "typescript": "^4.8.4"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
