--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
+        "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^12.1.5",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/jest": "^29.4.0",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
         "@typescript-eslint/parser": "^5.41.0",
         "babel-jest": "^29.3.1",
@@ -56,10 +59,12 @@
         "eslint-plugin-react": "^7.31.10",
         "eslint-webpack-plugin": "^3.2.0",
         "jest": "^29.3.1",
+        "msw": "^1.0.0",
         "postcss": "^8.4.18",
         "postcss-loader": "^7.0.1",
         "postcss-preset-env": "^7.8.2",
         "prettier": "2.7.1",
-        "typescript": "^4.8.4"
+        "typescript": "^4.8.4",
+        "whatwg-fetch": "^3.6.2"
     }
 }
